--- a/devicemonitoringserver/CMakeLists.txt
+++ b/devicemonitoringserver/CMakeLists.txt
@@ -1,5 +1,10 @@
+set(CMAKE_CXX_STANDARD 17)
+
 cmake_minimum_required(VERSION 3.12)
+
 project(devicemonitoringserver CXX)
+
+
 
 FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
                   ${CMAKE_CURRENT_SOURCE_DIR}/handlers/*.h ${CMAKE_CURRENT_SOURCE_DIR}/handlers/*.cpp
